--- a/src/xlsxDiff/xlsxDiff.fsproj
+++ b/src/xlsxDiff/xlsxDiff.fsproj
@@ -10,12 +10,13 @@
     <Compile Include="XlsxCell.fs" />
     <Compile Include="Change.fs" />
     <Compile Include="CellifyDiff.fs" />
+    <Compile Include="Command.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharpSpreadsheetML" Version="0.0.7"/>
-    <PackageReference Include="Spectre.Console" Version="0.41.1-preview.0.12"/>
+    <PackageReference Include="FSharpSpreadsheetML" Version="0.0.7" />
+    <PackageReference Include="Spectre.Console" Version="0.41.1-preview.0.12" />
   </ItemGroup>
 
 </Project>
