--- a/src/xlsxDiff/xlsxDiff.fsproj
+++ b/src/xlsxDiff/xlsxDiff.fsproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <CreateDesktopShortcut>false</CreateDesktopShortcut>
     <WarnOn>3390;$(WarnOn)</WarnOn>
   </PropertyGroup>
 
